# BMPreader

./: CMakeLists.txt  README.md  main.cpp
BMPreader/: BMPreader.cpp  BMPreader.h
